--- a/mssql/README
+++ b/mssql/README
@@ -1,24 +1,30 @@
 
-### Monitoring Microsoft MSSql in linux environment using site24x7 python plugins
+Monitoring Microsoft MSSql in linux environment using site24x7 python plugins
 
 Tested in Ubuntu 16.04, python 2.7, python 3.5
 
-### Requirements:
+Requirements:
+------------
 Microsoft SQL Server setup
 FreeTDS
 UnixODBC
 pyodbc
 
 
-### Installation and Configurations
+Installation and Configurations
+-------------------------------
 Microsoft SQL Server setup
+
 Refer: 
 https://docs.microsoft.com/en-us/sql/linux/quickstart-install-connect-ubuntu
 https://docs.microsoft.com/en-us/sql/linux/sql-server-linux-configure-mssql-conf?view=sql-server-2017
 
 
-### FreeTDS
+FreeTDS
+-------
+
 Driver libraries that allows programs to natively talk to Microsoft SQL Server database.
+
 sudo apt-get install -y freetds-bin freetds-common freetds-dev libct4 libsybdb5
 
 Configuration file:  /etc/freetds/freetds.conf :
@@ -31,9 +37,10 @@ tds version = 8.0
 To test connection:
 tsql -S SQLDemo -U <username> -P <password>
 
-
-### UnixODBC
+UnixODBC
+--------
 Driver Manager implementation of the ODBC API.
+
 sudo apt-get install -y unixodbc unixodbc-dev unixodbc-bin libodbc1 odbcinst1debian2 tdsodbc php5-odbc
 
 Configuration file:  /etc/odbcinst.ini :
@@ -53,12 +60,16 @@ Database=TESTDB
 Servername=SQLDemo
 
 
-### pyodbc
+pyodbc
+-------
+
 Python Module which uses ODBC to connect to the database. Supports both 2.x and 3.x versions
+
 pip install pyodbc
 
 
 Creating user and password for plugin:
+-------------------------------------
 CREATE LOGIN S24X7PLUGIN WITH PASSWORD = 'S24x7PLUGIN';  
 GO  
 CREATE USER S24X7PLUGIN FOR LOGIN S24X7PLUGIN;  
@@ -70,8 +81,9 @@ GO
 GRANT VIEW SERVER STATE TO S24X7PLUGIN
 GO
 
-### Attributes Monitored:
-### Raw counter variables
+Attributes Monitored:
+Raw counter variables
+---------------------
 Data File(s) Size (KB)
 Percent Log Used
 Active Transactions
@@ -79,7 +91,8 @@ Log Growths
 Log Shrinks
 Log Truncations
 
-### Processed counter variables
+Processed counter variables
+---------------------------
 Transactions per sec
 Log Cache Hit Ratio
 Log Flushes per sec
